--- a/stories/index.html
+++ b/stories/index.html
@@ -1666,6 +1666,12 @@
       <td><a name="de0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0158</td>
+      <td><a href="/stories/de/0158_henne-und-adler_slides.html" target="_blank">Henne und Adler</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="de0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0173</td>
       <td><a href="/stories/de/0173_der-regenvogel_slides.html" target="_blank">Der Regenvogel</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1676,6 +1682,12 @@
       <td><a href="/stories/de/0200_unglaubliche-daisy_slides.html" target="_blank">Unglaubliche Daisy</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="de0200"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0201</td>
+      <td><a href="/stories/de/0201_eselskind_slides.html" target="_blank">Eselskind</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="de0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0204</td>
@@ -1748,6 +1760,12 @@
       <td><a href="/stories/de/0337_kinder-aus-wachs_slides.html" target="_blank">Kinder aus Wachs</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="de0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0342</td>
+      <td><a href="/stories/de/0342_strafe_slides.html" target="_blank">Strafe</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="de0342"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -5919,7 +5937,7 @@
     </tr>
     <tr>
       <td>0004</td>
-      <td><a href="http://africanstorybook.org/stories/goat-dog-and-cow">Goat, Dog and Cow</a></td>
+      <td><a href="http://africanstorybook.org/stories/goat-dog-and-cow">Goat, Dog, and Cow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#ar0004">ar</a>, <a href="#bn0004">bn</a>, <a href="#de0004">de</a>, <a href="#es0004">es</a>, <a href="#fa0004">fa</a>, <a href="#hi0004">hi</a>, <a href="#it0004">it</a>, <a href="#ko0004">ko</a>, <a href="#nn0004">nn</a>, <a href="#no0004">no</a>, <a href="#pa0004">pa</a>, <a href="#pl0004">pl</a>, <a href="#ru0004">ru</a>, <a href="#tl0004">tl</a>, <a href="#tr0004">tr</a>, <a href="#ur0004">ur</a>, <a href="#yue0004">yue</a>, <a href="#zh0004">zh</a></td>
     </tr>
@@ -6221,7 +6239,7 @@
       <td>0158</td>
       <td><a href="http://africanstorybook.org/stories/hen-and-eagle">Hen and Eagle</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#it0158">it</a>, <a href="#ko0158">ko</a>, <a href="#nn0158">nn</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#pl0158">pl</a>, <a href="#tl0158">tl</a>, <a href="#tr0158">tr</a>, <a href="#ur0158">ur</a>, <a href="#yue0158">yue</a>, <a href="#zh0158">zh</a></td>
+      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#de0158">de</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#it0158">it</a>, <a href="#ko0158">ko</a>, <a href="#nn0158">nn</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#pl0158">pl</a>, <a href="#tl0158">tl</a>, <a href="#tr0158">tr</a>, <a href="#ur0158">ur</a>, <a href="#yue0158">yue</a>, <a href="#zh0158">zh</a></td>
     </tr>
     <tr>
       <td>0172</td>
@@ -6263,7 +6281,7 @@
       <td>0201</td>
       <td><a href="http://africanstorybook.org/stories/donkey-child">Donkey Child</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0201">ar</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#it0201">it</a>, <a href="#ja0201">ja</a>, <a href="#ko0201">ko</a>, <a href="#nn0201">nn</a>, <a href="#no0201">no</a>, <a href="#pa0201">pa</a>, <a href="#pl0201">pl</a>, <a href="#tl0201">tl</a>, <a href="#tr0201">tr</a>, <a href="#ur0201">ur</a>, <a href="#yue0201">yue</a>, <a href="#zh0201">zh</a></td>
+      <td><a href="#ar0201">ar</a>, <a href="#de0201">de</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#it0201">it</a>, <a href="#ja0201">ja</a>, <a href="#ko0201">ko</a>, <a href="#nn0201">nn</a>, <a href="#no0201">no</a>, <a href="#pa0201">pa</a>, <a href="#pl0201">pl</a>, <a href="#tl0201">tl</a>, <a href="#tr0201">tr</a>, <a href="#ur0201">ur</a>, <a href="#yue0201">yue</a>, <a href="#zh0201">zh</a></td>
     </tr>
     <tr>
       <td>0204</td>
@@ -6491,7 +6509,7 @@
       <td>0342</td>
       <td><a href="http://africanstorybook.org/stories/punishment">Punishment</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0342">ar</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#it0342">it</a>, <a href="#ko0342">ko</a>, <a href="#nn0342">nn</a>, <a href="#no0342">no</a>, <a href="#pa0342">pa</a>, <a href="#pl0342">pl</a>, <a href="#tl0342">tl</a>, <a href="#tr0342">tr</a>, <a href="#ur0342">ur</a>, <a href="#vi0342">vi</a>, <a href="#yue0342">yue</a>, <a href="#zh0342">zh</a></td>
+      <td><a href="#ar0342">ar</a>, <a href="#de0342">de</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#it0342">it</a>, <a href="#ko0342">ko</a>, <a href="#nn0342">nn</a>, <a href="#no0342">no</a>, <a href="#pa0342">pa</a>, <a href="#pl0342">pl</a>, <a href="#tl0342">tl</a>, <a href="#tr0342">tr</a>, <a href="#ur0342">ur</a>, <a href="#vi0342">vi</a>, <a href="#yue0342">yue</a>, <a href="#zh0342">zh</a></td>
     </tr>
     <tr>
       <td>0359</td>
