--- a/stories/de/0262_magozwe_slides.html
+++ b/stories/de/0262_magozwe_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Benim Kedim Nerede? - Global African Storybook</title>
+  <title>Magozwe - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="benim-kedim-nerede" class="slide level1">
-<h1>Benim Kedim Nerede?</h1>
+<section id="magozwe" class="slide level1">
+<h1>Magozwe</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/02.jpg" /></p>
-<p>Benim kedim nerede?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
+<p>In der geschäftigen Stadt Nairobi, weit entfernt von einem liebevollen Zuhause, lebte eine Gruppe obdachloser Jungen. Sie lebten in den Tag hinein. Eines Morgens packten sie ihre Matten nach einer kalten Nacht auf dem Bürgersteig. Sie machten ein Feuer aus Müll gegen die Kälte. Einer der Jungen unter ihnen war Magozwe. Er war der Jüngste.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/03.jpg" /></p>
-<p>Yatağın altında mı?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/03.jpg" /></p>
+<p>Als Magozwes Eltern starben war er erst fünf Jahre alt. Er lebte von dort an mit seinem Onkel. Dieser Mann kümmerte sich nicht um den Jungen. Er gab Magozwe nicht genug Essen. Er ließ den Jungen sehr hart arbeiten.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/04.jpg" /></p>
-<p>Dolabın üstünde mi?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/04.jpg" /></p>
+<p>Wenn Magozwe sich beschwerte oder nachfragte, schlug in der Onkel. Als Magozwe fragte, ob er zur Schule gehen könnte, schlug ihn sein Onkel und sagte: &quot;Du bist zu dumm um etwas zu lernen.&quot; Nach drei Jahren unter diesen Bedingungen lief Magozwe seinem Onkel davon. Er lebte fortan auf der Straße.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/05.jpg" /></p>
-<p>Koltuğun yaninda mı?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/05.jpg" /></p>
+<p>Das Leben auf der Straße war hart und es war schwer für die meisten Jungen, bloß das tägliche Essen aufzutreiben. Manchmal wurden sie verhaftet, manchmal geschlagen. Wenn sie krank waren, half ihnen niemand. Sie hatten nur wenig Geld, das sie vom Betteln oder durch den Verkauf von gesammelten Plastik und anderem Recycling hatten. Ihr Leben war weiter erschwert durch Kämpfe mit Gruppen von Rivalen, die Teile der Städte beherrschen wollten.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/06.jpg" /></p>
-<p>Çöpün yan tarafında mı?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/06.jpg" /></p>
+<p>Eines Tages als Magozwe die Mülltonnen durchforstete, fand er ein altes Bilderbuch. Er wischte den Schmutz ab und packte es in seinen Beutel. Von da an nahm er das Buch jeden Tag heraus und sah sich die Bilder an. Er konnte die Wörter nicht lesen.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/07.jpg" /></p>
-<p>Sepetin içinde mi?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/07.jpg" /></p>
+<p>Die Bilder erzählten die Geschichte eines Jungen, der Pilot werden wollte. Magozwe träumte auch davon, ein Pilot zu sein. Manchmal stellte er sich vor, er sei der Junge in der Geschichte.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/08.jpg" /></p>
-<p>Evin dışında mı?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
+<p>Es war kalt und Magozwe war auf der Straße und bettelte. Ein Mann trat zu ihm. &quot;Hallo, ich bin Thomas. Ich arbeite in der Nähe, an einem Ort, wo du etwas zu essen bekommen kannst&quot;, sagte der Mann. Er zeigte auf ein gelbes Haus mit einem blauen Dach. &quot;Ich hoffe, du wirst dorthin gehen, um etwas zu essen?&quot;, fragte er. Magozwe sah erst zu dem Mann, und dann zum Haus. &quot;Vielleicht&quot;, antwortet er und ging davon.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/09.jpg" /></p>
-<p>İşte burada!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/09.jpg" /></p>
+<p>Über die nächsten Monate trafen die obdachlosen Jungen Thomas oft. Er sprach gern mit Menschen, besonders Menschen, die auf der Straße lebten. Thomas hörte sich ihre Lebensgeschichte an. Er war ernst und geduldig, niemals unhöflich oder respektlos. Einige der Jungen fingen an, sich mittags im blauen und gelben Haus Essen zu holen.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,18 +168,90 @@
 </section>
 <section class="slide level1">
 
-<h2 id="benim-kedim-nerede-1">Benim Kedim Nerede?</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Nahide Büşra Ertekin, Zeynep Kara<br> <strong>Language:</strong> Turkish<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
+<p>Magozwe saß auf dem Bürgersteig und las das Bilderbuch als Thomas sich neben ihn setzte. &quot;Von handelt die Geschichte?&quot;, fragte er. &quot;Von einem Jungen, der Pilot wird&quot;, antwortet Magozwe. &quot;Wie heißt der Junge?&quot;, wollte Thomas wissen. &quot;Weiß ich nicht, ich kann nicht lesen&quot;, gab Magozwe leise zur Antwort.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/11.jpg" /></p>
+<p>Als sie sich trafen, erzählte Magozwe Thomas seine eigene Geschichte. Es war die Geschichte über seinen Onkel und warum er weggelaufen war. Thomas erwiderte nicht viel und er sagte Magozwe auch nicht, was er tun sollte, aber er hörte stets aufmerksam zu. Manchmal unterhielten sie sich während sie im Haus mit dem blauen Dach aßen.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
+<p>Als Magozwe ungefähr zehn Jahre alt war gab Thomas ihm ein Bilderbuch. Die Geschichte handelte von einem Dorfjungen, der zu einem berühmter Fußballspieler heranwuchs. Thomas las Magozwe die Geschichte oft vor, bis er eines Tages sagte: &quot;Ich denke, es ist an der Zeit, dass du zur Schule gehst und lernst zu lesen. Was senkst du?&quot; Thomas erklärte ihm, dass er einen Ort kennt, an dem Kinder wohnen und zur Schule gehen können.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
+<p>Magozwe dachte über diesen neuen Ort nach, und darüber zur Schule zu gehen. Was, wenn sein Onkel recht hatte und er zu dumm war um zu lernen? Was wenn man ihn an dem neuen Ort schlagen würde? Er hatte Angst. &quot;Vielleicht ist es besser, weiter auf der Straße zu leben&quot;, dachte er.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/14.jpg" /></p>
+<p>Er erzählte Thomas von seinen Ängsten. Mit der Zeit überzeugte der Mann den Jungen, dass sein Leben an dem neuen Ort besser sein könnte.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/15.jpg" /></p>
+<p>Und so zog Magozwe in ein Zimmer in einem Haus mit grünem Dach. Er teilte das Zimmer mit zwei anderen Jungen. Insgesamt lebten zehn Kinder in dem Haus. Zusammen mit Tante Cissy and ihrem Mann, drei Hunden, einer Katze und einer alten Ziege.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/16.jpg" /></p>
+<p>Magozwe fing an, die Schule zu besuchen und es war schwierig. Er hatte viel aufzuholen. Manchmal wollte er aufgeben. Aber er dachte an den Piloten und den Fußballspieler in den Bilderbüchern. So wie sie gab auch er nicht auf.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
+<p>Magozwe saß im Garten des Hauses mit dem grünen Dach und las ein Bilderbuch aus der Schule. Thomas kam dazu und setzte sich neben ihn. &quot;Wovon handelt die Geschichte?&quot;, wollte Thomas wissen. &quot;Sie handelt von einem Jungen, der Lehrer wird&quot;, antwortete Magozwe. &quot;Wie heißt der Junge?&quot;, fragte Thomas weiter. &quot;Er heißt Magozwe&quot;, antwortete Magozwe mit einem Lächeln.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="magozwe-1">Magozwe</h2>
+<strong>Text:</strong> Lesley Koyi<br> <strong>Veranschaulichung:</strong> Wiehan de Jager<br> <strong>Übersetzung:</strong> Anna Westpfahl<br> <strong>Sprache:</strong> Deutsch<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/where-my-cat'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/magozwe-0'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
