--- a/stories/de/0294_omas-bananen_slides.html
+++ b/stories/de/0294_omas-bananen_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Benim Kedim Nerede? - Global African Storybook</title>
+  <title>Omas Bananen - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="benim-kedim-nerede" class="slide level1">
-<h1>Benim Kedim Nerede?</h1>
+<section id="omas-bananen" class="slide level1">
+<h1>Omas Bananen</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/02.jpg" /></p>
-<p>Benim kedim nerede?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
+<p>Omas Garten war wunderbar, voll mit Sorghum, Hirse und Maniok. Aber das beste von allem waren die Bananen. Obwohl Oma viele Enkelkinder hatte, wusste ich insgeheim, dass ich ihr Liebling war. Sie lud mich oft in ihr Haus ein. Sie erzählte mir kleine Geheimnisse. Aber ein Geheimnis verriet sie mir nicht: wo sie die Bananen reifen ließ.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/03.jpg" /></p>
-<p>Yatağın altında mı?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
+<p>Eines Tages sah ich einen großen Strohkorb in der Sonne vor Omas Haus stehen. Als ich fragte, wofür er war, bekam ich nur die Antwort: &quot;Das ist mein Zauberkorb.&quot; Neben dem Korb lagen mehrere Bananenblätter, die Oma von Zeit zu Zeit wendete. Ich war neugierig. &quot;Wofür sind die Blätter, Oma?&quot;, wollte ich wissen. Die einzige Antwort darauf war: &quot;Das sind meine Zauberblätter.&quot;</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/04.jpg" /></p>
-<p>Dolabın üstünde mi?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
+<p>Es war so interessant, Oma, die Bananen, die Bananenblätter und den großen Strohkorb zu beobachten. Aber Oma schickte mich auf einen Botengang zu meiner Mutter. &quot;Oma, bitte lass mich dir zusehen bei der Vorbereitung...&quot; &quot;Sei nicht so ein Dickkopf, Kind, mach, was ich dir sage&quot;, beharrte Oma. Ich machte mich schnell auf den Weg.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/05.jpg" /></p>
-<p>Koltuğun yaninda mı?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
+<p>Als ich zurückkam saß Oma draußen, aber ohne Korb noch Bananen. &quot;Oma, wo ist der Korb, wo sind all die Bananen, und wo...&quot; Aber die einzige Antwort darauf war: &quot;Die sind an meinem Zauberplatz.&quot; Was für eine Enttäuschung!</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/06.jpg" /></p>
-<p>Çöpün yan tarafında mı?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
+<p>Zwei Tage später schickte Oma mich los, um ihren Gehstock aus dem Schlafzimmer zu holen. Sobald ich die Tür öffnete, strömte mir der intensive Geruch reifender Bananen entgegen. Im Zimmer stand Omas großer Zauberstrohkorb. Er war gut unter einer alten Decke versteckt. Ich hob sie ein bisschen hoch und schnupperte den herrlichen Geruch.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/07.jpg" /></p>
-<p>Sepetin içinde mi?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
+<p>Ich bekam einen Schreck als Oma rief. &quot;Was machst du denn? Beeil dich und bring mir meinen Stock.&quot; Ich lief schnell mit ihrem Gehstock nach draußen. &quot;Worüber lachst du?&quot;, fragte Oma. Da merkte ich, dass ich immer noch über die Entdeckung ihres Zauberplatzes lächelte.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/08.jpg" /></p>
-<p>Evin dışında mı?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
+<p>Als Oma am nächsten Tag meine Mutter besuchte, rannte ich zu ihrem Haus, um noch einmal nach den Bananen zu sehen. Es gab ein sehr reifes Bündel. Ich nahm eine und versteckte sie in meinem Kleid. Nachdem ich den Korb wieder zugedeckt hatte, ging ich hinter das Haus und aß sie schnell. Es war die süßeste Banane, die ich je gegessen hatte.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/09.jpg" /></p>
-<p>İşte burada!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
+<p>Als Oma am darauffolgenden Tag im garten Gemüse erntete, stahl ich mich davon und sah nach den Bananen. Fast alle waren reif. Ich konnte mich nicht beherrschen, ein Bündel mit vier Bananen zu nehmen. Als ich zur Tür schlich, hörte ich Oma draußen husten. Ich konnte die Bananen eben noch unter meinem Kleid verstecken und an ihr vorbei laufen.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,18 +168,36 @@
 </section>
 <section class="slide level1">
 
-<h2 id="benim-kedim-nerede-1">Benim Kedim Nerede?</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Nahide Büşra Ertekin, Zeynep Kara<br> <strong>Language:</strong> Turkish<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
+<p>Am nächsten Tag war Markt. Oma wachte früh auf. Sie verkaufte immer reife Bananen und Maniok auf dem Markt. Ich hatte keine Eile, sie an dem Tag zu besuchen. Aber ich konnte ihr nicht lange aus dem Weg gehen.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
+<p>Später am Abend riefen mich meine Mutter, Vater und meine Oma. Ich wusste warum. Als ich mich an dem Abend schlafen legt, wusste ich, dass ich nie wieder etwas stehlen konnte, nicht von Oma, nicht von meinen Eltern und mit Sicherheit nicht von irgendjemand anderem.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="omas-bananen-1">Omas Bananen</h2>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Veranschaulichung:</strong> Catherine Groenewald<br> <strong>Übersetzung:</strong> Anna Westpfahl<br> <strong>Sprache:</strong> Deutsch<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/where-my-cat'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/grandma%E2%80%99s-bananas'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
