--- a/stories/index.html
+++ b/stories/index.html
@@ -1726,10 +1726,22 @@
       <td><a name="de0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0262</td>
+      <td><a href="/stories/de/0262_magozwe_slides.html" target="_blank">Magozwe</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="de0262"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0271</td>
       <td><a href="/stories/de/0271_zwei_slides.html" target="_blank">Zwei</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="de0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0294</td>
+      <td><a href="/stories/de/0294_omas-bananen_slides.html" target="_blank">Omas Bananen</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="de0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0296</td>
@@ -1964,7 +1976,7 @@
     </tr>
     <tr>
       <td>0253</td>
-      <td><a href="/stories/gu/0253_મારી-ચિત્ર-કિતાબ-_slides.html" target="_blank">મારી ચિત્ર કિતાબ </a></td>
+      <td><a href="/stories/gu/0253_મારી-ચિત્ર-કિતાબ-_slides.html" target="_blank">મારી ચિત્ર કિતાબ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsOThjNWlCV0dpQlk"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="gu0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -3077,7 +3089,7 @@
     </tr>
     <tr>
       <td>0234</td>
-      <td><a href="/stories/no/0234_fotballhelten-andiswa_slides.html" target="_blank">Fotballhelten Andiswa </a></td>
+      <td><a href="/stories/no/0234_fotballhelten-andiswa_slides.html" target="_blank">Fotballhelten Andiswa</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="no0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
@@ -3788,7 +3800,7 @@
     </tr>
     <tr>
       <td>0324</td>
-      <td><a href="/stories/fa/0324_روزی-که-من-خانه-را-به-قصد-شهر-ترک-کردم_slides.html" target="_blank">روزی که من خانه را به قصد شهر ترک کردم </a></td>
+      <td><a href="/stories/fa/0324_روزی-که-من-خانه-را-به-قصد-شهر-ترک-کردم_slides.html" target="_blank">روزی که من خانه را به قصد شهر ترک کردم</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsZXJ0R3lPN05lLXc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="fa0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -6371,7 +6383,7 @@
       <td>0262</td>
       <td><a href="http://africanstorybook.org/stories/magozwe-0">Magozwe</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0262">ar</a>, <a href="#es0262">es</a>, <a href="#fa0262">fa</a>, <a href="#it0262">it</a>, <a href="#ko0262">ko</a>, <a href="#nn0262">nn</a>, <a href="#no0262">no</a>, <a href="#pa0262">pa</a>, <a href="#pl0262">pl</a>, <a href="#tl0262">tl</a>, <a href="#tr0262">tr</a>, <a href="#ur0262">ur</a>, <a href="#yue0262">yue</a>, <a href="#zh0262">zh</a></td>
+      <td><a href="#ar0262">ar</a>, <a href="#de0262">de</a>, <a href="#es0262">es</a>, <a href="#fa0262">fa</a>, <a href="#it0262">it</a>, <a href="#ko0262">ko</a>, <a href="#nn0262">nn</a>, <a href="#no0262">no</a>, <a href="#pa0262">pa</a>, <a href="#pl0262">pl</a>, <a href="#tl0262">tl</a>, <a href="#tr0262">tr</a>, <a href="#ur0262">ur</a>, <a href="#yue0262">yue</a>, <a href="#zh0262">zh</a></td>
     </tr>
     <tr>
       <td>0264</td>
@@ -6419,7 +6431,7 @@
       <td>0294</td>
       <td><a href="http://africanstorybook.org/stories/grandma%E2%80%99s-bananas">Grandma’s bananas</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0294">ar</a>, <a href="#es0294">es</a>, <a href="#fa0294">fa</a>, <a href="#it0294">it</a>, <a href="#ja0294">ja</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#nn0294">nn</a>, <a href="#no0294">no</a>, <a href="#pa0294">pa</a>, <a href="#pl0294">pl</a>, <a href="#tl0294">tl</a>, <a href="#tr0294">tr</a>, <a href="#ur0294">ur</a>, <a href="#yue0294">yue</a>, <a href="#zh0294">zh</a></td>
+      <td><a href="#ar0294">ar</a>, <a href="#de0294">de</a>, <a href="#es0294">es</a>, <a href="#fa0294">fa</a>, <a href="#it0294">it</a>, <a href="#ja0294">ja</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#nn0294">nn</a>, <a href="#no0294">no</a>, <a href="#pa0294">pa</a>, <a href="#pl0294">pl</a>, <a href="#tl0294">tl</a>, <a href="#tr0294">tr</a>, <a href="#ur0294">ur</a>, <a href="#yue0294">yue</a>, <a href="#zh0294">zh</a></td>
     </tr>
     <tr>
       <td>0296</td>
